# copilot-mcp-app-blueprint

./: .gitignore  README.md  m365agents.yml
appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json
archive/: README-original.md  README.md
archive/agent/: m365agents.local.yml  m365agents.yml  package-lock.json  package.json
archive/agent/appPackage/: manifest.json
archive/agent/infra/: azure.parameters.json
archive/agent/src/: agent.ts  cards.ts  export.ts  exportServer.ts  index.ts  nlp.ts
archive/cards/: 01-dashboard.json  02-context-form.json  03-setup-focus.json  04-persona.json  05-brand-voice.json  06-treatment-message.json  07-generation-progress.json  08-summary.json  README.md
archive/design-docs/: DESIGN.md  conversation-flows.md  mcp-tools.md
docs/: architecture.md  auth-generic-oauth.md  auth-runbook.md  production-architecture.md  security-and-login.md
env/: .contoso-oauth.secret.example  .env.dev.example
scripts/: az_login_mfa.sh  build_package.sh  deploy_azure.sh  diag_device_code.py
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/pega_mcp/: __init__.py  auth.py  data.py  export.py  server.py  settings.py  store.py  tools.py
server/scripts/: gen_ai_plugin.py  smoke_test.py  test_auth.py
widgets/: build.mjs  package-lock.json  package.json
widgets/src/: App.tsx  devMock.ts  format.ts  index.html  main.tsx  theme.ts  types.ts
widgets/src/components/: ui.tsx
widgets/src/mcp/: McpBridge.tsx
widgets/src/views/: Action.tsx  Brand.tsx  Context.tsx  Data.tsx  Experiences.tsx  (+7 more)
(+1 files in other folders)
