[project]
name = "pega-blueprint-mcp"
version = "0.1.0"
description = "Pega Customer Engagement Blueprint MCP Apps server (data services + rich React/Fluent UI) for Microsoft 365 Copilot declarative agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.26.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1",
]

[project.scripts]
pega-blueprint-mcp = "pega_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pega_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"pega_mcp/web/widget.html" = "pega_mcp/web/widget.html"
